// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with editPath renders correctly 1`] = `
<div
  to="foo/:id/avatar"
>
  <img
    alt={undefined}
    src="/images/avatar.png"
    style={
      Object {
        "backgroundColor": "#ddd",
        "borderRadius": 2,
        "display": "inline-block",
        "height": "auto",
        "marginRight": 16,
        "maxWidth": "100%",
        "objectFit": "cover",
        "width": 400,
      }
    }
    title="Clique para editar"
  />
</div>
`;

exports[`without editPath renders correctly 1`] = `
<img
  alt={undefined}
  src="/images/avatar.png"
  style={
    Object {
      "backgroundColor": "#ddd",
      "borderRadius": 2,
      "display": "inline-block",
      "height": "auto",
      "marginRight": 16,
      "maxWidth": "100%",
      "objectFit": "cover",
      "width": 400,
    }
  }
  title={undefined}
/>
`;
